--- a/style.css
+++ b/style.css
@@ -48,8 +48,9 @@ section::before{
 .about::before{
     content: 'About';
 }
-.about{
-    margin-top: 58px;
+
+.about, .work{
+    margin-top: 128px;
 }
 
 .about-exp-item{
@@ -64,7 +65,73 @@ section::before{
 
 .about-exp-item-detail{
     display: none;
+    font-size: 13px;
 }
+
+.work::before{
+    content: 'Work';
+}
+
+.work-img{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 
+    "work-1 work-2"
+    "work-3 work-3";
+    gap: 12px;
+}
+
+.work-img img{
+    width: 100%;
+}
+
+#work-1 {
+    grid-area: work-1;
+}
+
+#work-1:hover::after{
+    content: 'Design web';
+}
+
+#work-2 {
+    grid-area: work-2;
+}
+
+#work-2:hover::after{
+    content: 'Software Enginner';
+}
+
+#work-3 {
+    grid-area: work-3;
+}
+
+#work-3:hover::after{
+    content: 'Frontend Developer';
+}
+
+.work-img-item{
+    position: relative;
+}
+
+.work-img-item:hover:after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFFF;
+    font-weight: 700;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+
+
 
 
 @keyframes upDown{
