--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ section::before{
     font-size: 48px;
 }
 
+.home img{
+    width: 100%;
+}
+
 .btn.button{
     border: 2px solid #1d1d1d;
     border-radius: 24px;
@@ -73,7 +77,7 @@ section::before{
 
 .work::before{
     content: 'Work';
-    top: 10px;
+    
 }
 
 .work-img{
@@ -152,7 +156,21 @@ section::before{
     font-weight: 700;
 }
 
+@media only screen and (max-width : 768px){
+    body{
+        padding-inline: 0;
+    }
 
+    .home img {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width : 576px) {
+    section::before{
+        left: 10px;
+    }
+}
 
 @keyframes upDown{
     0% {
